--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Click==7.0
-Flask==1.1.1
+click==7.1.1
+Flask==1.1.2
+Flask-MySQLdb==0.2.0
 Flask-Session==0.3.1
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-psycopg2-binary==2.8.4
-SQLAlchemy==1.3.13
-Werkzeug==0.16.0
+mysql-connector==2.2.9
+mysqlclient==1.4.6
+Werkzeug==1.0.1
